exports[`no-loop-iterable-mutation > invalid(1): for (const item of items) {\n\titems.push(item);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(1): for (const item of items) {\n\titems.push(item);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.push(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(10): for (const item of items) {\n\titems?.push(item);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items?.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(10): for (const item of items) {\n\titems?.push(item);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items?.push(item);
    | 	       ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(11): for (const item of items) {\n\titems.push?.(item);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.push?.(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(11): for (const item of items) {\n\titems.push?.(item);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.push?.(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(12): for (const item of items) {\n\titems['push'](item);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items['push'](item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(12): for (const item of items) {\n\titems['push'](item);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items['push'](item);
    | 	      ^^^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(13): for (const item of items.values()) {\n\titems.push(item);\n} 1`] = `

  1 | for (const item of items.values()) {
  2 | 	items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(13): for (const item of items.values()) {\n\titems.push(item);\n} 2`] = `

Message:
  1 | for (const item of items.values()) {
> 2 | 	items.push(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(14): for (const item of items['values']()) {\n\titems.push(item);\n} 1`] = `

  1 | for (const item of items['values']()) {
  2 | 	items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(14): for (const item of items['values']()) {\n\titems.push(item);\n} 2`] = `

Message:
  1 | for (const item of items['values']()) {
> 2 | 	items.push(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(15): for (const index of items.keys()) {\n\titems.pop();\n} 1`] = `

  1 | for (const index of items.keys()) {
  2 | 	items.pop();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(15): for (const index of items.keys()) {\n\titems.pop();\n} 2`] = `

Message:
  1 | for (const index of items.keys()) {
> 2 | 	items.pop();
    | 	      ^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(16): for (const index of items['keys']()) {\n\titems.pop();\n} 1`] = `

  1 | for (const index of items['keys']()) {
  2 | 	items.pop();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(16): for (const index of items['keys']()) {\n\titems.pop();\n} 2`] = `

Message:
  1 | for (const index of items['keys']()) {
> 2 | 	items.pop();
    | 	      ^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(17): for (const [index, item] of items.entries()) {\n\titems.push(item);\n} 1`] = `

  1 | for (const [index, item] of items.entries()) {
  2 | 	items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(17): for (const [index, item] of items.entries()) {\n\titems.push(item);\n} 2`] = `

Message:
  1 | for (const [index, item] of items.entries()) {
> 2 | 	items.push(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(18): for (const [index, item] of items['entries']()) {\n\titems.push(item);\n} 1`] = `

  1 | for (const [index, item] of items['entries']()) {
  2 | 	items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(18): for (const [index, item] of items['entries']()) {\n\titems.push(item);\n} 2`] = `

Message:
  1 | for (const [index, item] of items['entries']()) {
> 2 | 	items.push(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(19): for (const item of this.items) {\n\tthis.items.push(item);\n} 1`] = `

  1 | for (const item of this.items) {
  2 | 	this.items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(19): for (const item of this.items) {\n\tthis.items.push(item);\n} 2`] = `

Message:
  1 | for (const item of this.items) {
> 2 | 	this.items.push(item);
    | 	           ^^^^ Do not mutate \`this.items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(2): for (const item of items) {\n\titems.unshift(item);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.unshift(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(2): for (const item of items) {\n\titems.unshift(item);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.unshift(item);
    | 	      ^^^^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(20): for (const item of object.items) {\n\tobject.items.push(item);\n} 1`] = `

  1 | for (const item of object.items) {
  2 | 	object.items.push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(20): for (const item of object.items) {\n\tobject.items.push(item);\n} 2`] = `

Message:
  1 | for (const item of object.items) {
> 2 | 	object.items.push(item);
    | 	             ^^^^ Do not mutate \`object.items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(21): for (const item of collections[index]) {\n\tcollections[index].push(item);\n} 1`] = `

  1 | for (const item of collections[index]) {
  2 | 	collections[index].push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(21): for (const item of collections[index]) {\n\tcollections[index].push(item);\n} 2`] = `

Message:
  1 | for (const item of collections[index]) {
> 2 | 	collections[index].push(item);
    | 	                   ^^^^ Do not mutate \`collections[index]\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(22): for (const item of (items)) {\n\t(items).push(item);\n} 1`] = `

  1 | for (const item of (items)) {
  2 | 	(items).push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(22): for (const item of (items)) {\n\t(items).push(item);\n} 2`] = `

Message:
  1 | for (const item of (items)) {
> 2 | 	(items).push(item);
    | 	        ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(23): for (const value of set) {\n\tset.add(value + 1);\n} 1`] = `

  1 | for (const value of set) {
  2 | 	set.add(value + 1);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(23): for (const value of set) {\n\tset.add(value + 1);\n} 2`] = `

Message:
  1 | for (const value of set) {
> 2 | 	set.add(value + 1);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(24): for (const value of set) {\n\tset.clear();\n} 1`] = `

  1 | for (const value of set) {
  2 | 	set.clear();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(24): for (const value of set) {\n\tset.clear();\n} 2`] = `

Message:
  1 | for (const value of set) {
> 2 | 	set.clear();
    | 	    ^^^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(25): for (const value of set.values()) {\n\tset.add(otherValue);\n} 1`] = `

  1 | for (const value of set.values()) {
  2 | 	set.add(otherValue);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(25): for (const value of set.values()) {\n\tset.add(otherValue);\n} 2`] = `

Message:
  1 | for (const value of set.values()) {
> 2 | 	set.add(otherValue);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(26): for (const value of set.values()) {\n\tset.delete(value);\n} 1`] = `

  1 | for (const value of set.values()) {
  2 | 	set.delete(value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(26): for (const value of set.values()) {\n\tset.delete(value);\n} 2`] = `

Message:
  1 | for (const value of set.values()) {
> 2 | 	set.delete(value);
    | 	    ^^^^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(27): const set = new Set();\nfor (const value of set.values()) {\n\tset.delete(value);\n\tset.add(value);\n} 1`] = `

  1 | const set = new Set();
  2 | for (const value of set.values()) {
  3 | 	set.delete(value);
  4 | 	set.add(value);
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(27): const set = new Set();\nfor (const value of set.values()) {\n\tset.delete(value);\n\tset.add(value);\n} 2`] = `

Message:
  1 | const set = new Set();
  2 | for (const value of set.values()) {
  3 | 	set.delete(value);
> 4 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(28): for (const value of set['values']()) {\n\tset.delete(value);\n} 1`] = `

  1 | for (const value of set['values']()) {
  2 | 	set.delete(value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(28): for (const value of set['values']()) {\n\tset.delete(value);\n} 2`] = `

Message:
  1 | for (const value of set['values']()) {
> 2 | 	set.delete(value);
    | 	    ^^^^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(29): for (let value of set) {\n\tset.add(value);\n} 1`] = `

  1 | for (let value of set) {
  2 | 	set.add(value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(29): for (let value of set) {\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (let value of set) {
> 2 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(3): for (const item of items) {\n\titems.pop();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.pop();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(3): for (const item of items) {\n\titems.pop();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.pop();
    | 	      ^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(30): for (let value of set) {\n\tset.delete(value);\n} 1`] = `

  1 | for (let value of set) {
  2 | 	set.delete(value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(30): for (let value of set) {\n\tset.delete(value);\n} 2`] = `

Message:
  1 | for (let value of set) {
> 2 | 	set.delete(value);
    | 	    ^^^^^^ Do not mutate \`set\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(31): for (let value of set) {\n\tvalue = otherValue;\n\tset.add(value);\n} 1`] = `

  1 | for (let value of set) {
  2 | 	value = otherValue;
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(31): for (let value of set) {\n\tvalue = otherValue;\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (let value of set) {
  2 | 	value = otherValue;
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(32): for (let value of set) {\n\tvalue++;\n\tset.add(value);\n} 1`] = `

  1 | for (let value of set) {
  2 | 	value++;
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(32): for (let value of set) {\n\tvalue++;\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (let value of set) {
  2 | 	value++;
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(33): for (let value of set) {\n\tvalue = otherValue;\n\tset.delete(value);\n} 1`] = `

  1 | for (let value of set) {
  2 | 	value = otherValue;
  3 | 	set.delete(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(33): for (let value of set) {\n\tvalue = otherValue;\n\tset.delete(value);\n} 2`] = `

Message:
  1 | for (let value of set) {
  2 | 	value = otherValue;
> 3 | 	set.delete(value);
    | 	    ^^^^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(34): for (const value of set) {\n\tset.delete(value);\n\tset.add(value);\n} 1`] = `

  1 | for (const value of set) {
  2 | 	set.delete(value);
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(34): for (const value of set) {\n\tset.delete(value);\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const value of set) {
  2 | 	set.delete(value);
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(35): for (const value of set) {\n\t{\n\t\tset.delete(value);\n\t}\n\n\tset.add(value);\n} 1`] = `

  1 | for (const value of set) {
  2 | 	{
  3 | 		set.delete(value);
  4 | 	}
  5 |
  6 | 	set.add(value);
  7 | }

`;

exports[`no-loop-iterable-mutation > invalid(35): for (const value of set) {\n\t{\n\t\tset.delete(value);\n\t}\n\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const value of set) {
  2 | 	{
  3 | 		set.delete(value);
  4 | 	}
  5 |
> 6 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  7 | }

`;

exports[`no-loop-iterable-mutation > invalid(36): for (const value of set.keys()) {\n\tset.delete(value);\n\tset.add(value);\n} 1`] = `

  1 | for (const value of set.keys()) {
  2 | 	set.delete(value);
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(36): for (const value of set.keys()) {\n\tset.delete(value);\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const value of set.keys()) {
  2 | 	set.delete(value);
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(37): for (const value of set['keys']()) {\n\tset.delete(value);\n\tset.add(value);\n} 1`] = `

  1 | for (const value of set['keys']()) {
  2 | 	set.delete(value);
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(37): for (const value of set['keys']()) {\n\tset.delete(value);\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const value of set['keys']()) {
  2 | 	set.delete(value);
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(38): for (const [value] of set.entries()) {\n\tset.delete(value);\n\tset.add(value);\n} 1`] = `

  1 | for (const [value] of set.entries()) {
  2 | 	set.delete(value);
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(38): for (const [value] of set.entries()) {\n\tset.delete(value);\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const [value] of set.entries()) {
  2 | 	set.delete(value);
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(39): for (const [value] of set['entries']()) {\n\tset.delete(value);\n\tset.add(value);\n} 1`] = `

  1 | for (const [value] of set['entries']()) {
  2 | 	set.delete(value);
  3 | 	set.add(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(39): for (const [value] of set['entries']()) {\n\tset.delete(value);\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const [value] of set['entries']()) {
  2 | 	set.delete(value);
> 3 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(4): for (const item of items) {\n\titems.shift();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.shift();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(4): for (const item of items) {\n\titems.shift();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.shift();
    | 	      ^^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(40): for (const value of set) {\n\tif (shouldDelete) {\n\t\tset.delete(value);\n\t}\n\n\tset.add(value);\n} 1`] = `

  1 | for (const value of set) {
  2 | 	if (shouldDelete) {
  3 | 		set.delete(value);
  4 | 	}
  5 |
  6 | 	set.add(value);
  7 | }

`;

exports[`no-loop-iterable-mutation > invalid(40): for (const value of set) {\n\tif (shouldDelete) {\n\t\tset.delete(value);\n\t}\n\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const value of set) {
  2 | 	if (shouldDelete) {
  3 | 		set.delete(value);
  4 | 	}
  5 |
> 6 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  7 | }

`;

exports[`no-loop-iterable-mutation > invalid(41): for (const value of set) {\n\t{\n\t\tconst value = otherValue;\n\t\tset.add(value);\n\t}\n} 1`] = `

  1 | for (const value of set) {
  2 | 	{
  3 | 		const value = otherValue;
  4 | 		set.add(value);
  5 | 	}
  6 | }

`;

exports[`no-loop-iterable-mutation > invalid(41): for (const value of set) {\n\t{\n\t\tconst value = otherValue;\n\t\tset.add(value);\n\t}\n} 2`] = `

Message:
  1 | for (const value of set) {
  2 | 	{
  3 | 		const value = otherValue;
> 4 | 		set.add(value);
    | 		    ^^^ Do not mutate \`set\` while iterating over it.
  5 | 	}
  6 | }

`;

exports[`no-loop-iterable-mutation > invalid(42): for (const [key, value] of map) {\n\tmap.set(otherKey, value);\n} 1`] = `

  1 | for (const [key, value] of map) {
  2 | 	map.set(otherKey, value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(42): for (const [key, value] of map) {\n\tmap.set(otherKey, value);\n} 2`] = `

Message:
  1 | for (const [key, value] of map) {
> 2 | 	map.set(otherKey, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(43): const map = new Map();\nfor (const entry of map) {\n\tmap.set(entry, value);\n} 1`] = `

  1 | const map = new Map();
  2 | for (const entry of map) {
  3 | 	map.set(entry, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(43): const map = new Map();\nfor (const entry of map) {\n\tmap.set(entry, value);\n} 2`] = `

Message:
  1 | const map = new Map();
  2 | for (const entry of map) {
> 3 | 	map.set(entry, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(44): const set: Set<[string]> = new Set();\nfor (const [value] of set) {\n\tset.delete(value);\n} 1`] = `

  1 | const set: Set<[string]> = new Set();
  2 | for (const [value] of set) {
  3 | 	set.delete(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(44): const set: Set<[string]> = new Set();\nfor (const [value] of set) {\n\tset.delete(value);\n} 2`] = `

Message:
  1 | const set: Set<[string]> = new Set();
  2 | for (const [value] of set) {
> 3 | 	set.delete(value);
    | 	    ^^^^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(45): const set = new Set([['value']]);\nfor (const [value] of set) {\n\tset.delete(value);\n} 1`] = `

  1 | const set = new Set([['value']]);
  2 | for (const [value] of set) {
  3 | 	set.delete(value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(45): const set = new Set([['value']]);\nfor (const [value] of set) {\n\tset.delete(value);\n} 2`] = `

Message:
  1 | const set = new Set([['value']]);
  2 | for (const [value] of set) {
> 3 | 	set.delete(value);
    | 	    ^^^^^^ Do not mutate \`set\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(46): for (const key of map.keys()) {\n\tmap.set(otherKey, value);\n} 1`] = `

  1 | for (const key of map.keys()) {
  2 | 	map.set(otherKey, value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(46): for (const key of map.keys()) {\n\tmap.set(otherKey, value);\n} 2`] = `

Message:
  1 | for (const key of map.keys()) {
> 2 | 	map.set(otherKey, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(47): for (let key of map.keys()) {\n\tmap.set(key, value);\n} 1`] = `

  1 | for (let key of map.keys()) {
  2 | 	map.set(key, value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(47): for (let key of map.keys()) {\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (let key of map.keys()) {
> 2 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(48): for (let key of map.keys()) {\n\tkey = otherKey;\n\tmap.set(key, value);\n} 1`] = `

  1 | for (let key of map.keys()) {
  2 | 	key = otherKey;
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(48): for (let key of map.keys()) {\n\tkey = otherKey;\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (let key of map.keys()) {
  2 | 	key = otherKey;
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(49): for (let key of map.keys()) {\n\tkey++;\n\tmap.set(key, value);\n} 1`] = `

  1 | for (let key of map.keys()) {
  2 | 	key++;
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(49): for (let key of map.keys()) {\n\tkey++;\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (let key of map.keys()) {
  2 | 	key++;
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(5): for (const item of items) {\n\titems.splice(0, 1);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.splice(0, 1);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(5): for (const item of items) {\n\titems.splice(0, 1);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.splice(0, 1);
    | 	      ^^^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(50): for (const [key, value] of map) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 1`] = `

  1 | for (const [key, value] of map) {
  2 | 	map.delete(key);
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(50): for (const [key, value] of map) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (const [key, value] of map) {
  2 | 	map.delete(key);
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(51): for (const key of map.keys()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 1`] = `

  1 | for (const key of map.keys()) {
  2 | 	map.delete(key);
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(51): for (const key of map.keys()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (const key of map.keys()) {
  2 | 	map.delete(key);
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(52): for (const key of map['keys']()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 1`] = `

  1 | for (const key of map['keys']()) {
  2 | 	map.delete(key);
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(52): for (const key of map['keys']()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (const key of map['keys']()) {
  2 | 	map.delete(key);
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(53): for (const [key, value] of map.entries()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 1`] = `

  1 | for (const [key, value] of map.entries()) {
  2 | 	map.delete(key);
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(53): for (const [key, value] of map.entries()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (const [key, value] of map.entries()) {
  2 | 	map.delete(key);
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(54): for (const [key, value] of map['entries']()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 1`] = `

  1 | for (const [key, value] of map['entries']()) {
  2 | 	map.delete(key);
  3 | 	map.set(key, value);
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(54): for (const [key, value] of map['entries']()) {\n\tmap.delete(key);\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | for (const [key, value] of map['entries']()) {
  2 | 	map.delete(key);
> 3 | 	map.set(key, value);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  4 | }

`;

exports[`no-loop-iterable-mutation > invalid(55): for (const [key, value] of map) {\n\tswitch (kind) {\n\t\tcase 1:\n\t\t\tmap.delete(key);\n\t\t\tmap.set(key, value);\n\t}\n} 1`] = `

  1 | for (const [key, value] of map) {
  2 | 	switch (kind) {
  3 | 		case 1:
  4 | 			map.delete(key);
  5 | 			map.set(key, value);
  6 | 	}
  7 | }

`;

exports[`no-loop-iterable-mutation > invalid(55): for (const [key, value] of map) {\n\tswitch (kind) {\n\t\tcase 1:\n\t\t\tmap.delete(key);\n\t\t\tmap.set(key, value);\n\t}\n} 2`] = `

Message:
  1 | for (const [key, value] of map) {
  2 | 	switch (kind) {
  3 | 		case 1:
  4 | 			map.delete(key);
> 5 | 			map.set(key, value);
    | 			    ^^^ Do not mutate \`map\` while iterating over it.
  6 | 	}
  7 | }

`;

exports[`no-loop-iterable-mutation > invalid(56): for (const value of map.values()) {\n\tmap.clear();\n} 1`] = `

  1 | for (const value of map.values()) {
  2 | 	map.clear();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(56): for (const value of map.values()) {\n\tmap.clear();\n} 2`] = `

Message:
  1 | for (const value of map.values()) {
> 2 | 	map.clear();
    | 	    ^^^^^ Do not mutate \`map\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(57): for (const value of map.values()) {\n\tmap.delete(value);\n} 1`] = `

  1 | for (const value of map.values()) {
  2 | 	map.delete(value);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(57): for (const value of map.values()) {\n\tmap.delete(value);\n} 2`] = `

Message:
  1 | for (const value of map.values()) {
> 2 | 	map.delete(value);
    | 	    ^^^^^^ Do not mutate \`map\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(58): for (const value of map.values()) {\n\tmap.set(value, newValue);\n} 1`] = `

  1 | for (const value of map.values()) {
  2 | 	map.set(value, newValue);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(58): for (const value of map.values()) {\n\tmap.set(value, newValue);\n} 2`] = `

Message:
  1 | for (const value of map.values()) {
> 2 | 	map.set(value, newValue);
    | 	    ^^^ Do not mutate \`map\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(59): for (const item of items) {\n\tfor (const otherItem of otherItems) {\n\t\titems.push(otherItem);\n\t}\n} 1`] = `

  1 | for (const item of items) {
  2 | 	for (const otherItem of otherItems) {
  3 | 		items.push(otherItem);
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(59): for (const item of items) {\n\tfor (const otherItem of otherItems) {\n\t\titems.push(otherItem);\n\t}\n} 2`] = `

Message:
  1 | for (const item of items) {
  2 | 	for (const otherItem of otherItems) {
> 3 | 		items.push(otherItem);
    | 		      ^^^^ Do not mutate \`items\` while iterating over it.
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(6): for (const item of items) {\n\titems.sort();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.sort();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(6): for (const item of items) {\n\titems.sort();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.sort();
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(60): for (const item of items) {\n\tfor (const otherItem of items) {\n\t\titems.push(otherItem);\n\t}\n} 1`] = `

  1 | for (const item of items) {
  2 | 	for (const otherItem of items) {
  3 | 		items.push(otherItem);
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(60): for (const item of items) {\n\tfor (const otherItem of items) {\n\t\titems.push(otherItem);\n\t}\n} 2`] = `

Message:
  1 | for (const item of items) {
  2 | 	for (const otherItem of items) {
> 3 | 		items.push(otherItem);
    | 		      ^^^^ Do not mutate \`items\` while iterating over it.
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(61): for (const value of set) {\n\tfor (const innerValue of set) {\n\t\tset.delete(innerValue);\n\t}\n} 1`] = `

  1 | for (const value of set) {
  2 | 	for (const innerValue of set) {
  3 | 		set.delete(innerValue);
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(61): for (const value of set) {\n\tfor (const innerValue of set) {\n\t\tset.delete(innerValue);\n\t}\n} 2`] = `

Message:
  1 | for (const value of set) {
  2 | 	for (const innerValue of set) {
> 3 | 		set.delete(innerValue);
    | 		    ^^^^^^ Do not mutate \`set\` while iterating over it.
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(62): for (const [key, value] of map) {\n\tfor (const [innerKey] of map) {\n\t\tmap.delete(innerKey);\n\t}\n} 1`] = `

  1 | for (const [key, value] of map) {
  2 | 	for (const [innerKey] of map) {
  3 | 		map.delete(innerKey);
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(62): for (const [key, value] of map) {\n\tfor (const [innerKey] of map) {\n\t\tmap.delete(innerKey);\n\t}\n} 2`] = `

Message:
  1 | for (const [key, value] of map) {
  2 | 	for (const [innerKey] of map) {
> 3 | 		map.delete(innerKey);
    | 		    ^^^^^^ Do not mutate \`map\` while iterating over it.
  4 | 	}
  5 | }

`;

exports[`no-loop-iterable-mutation > invalid(63): for (const item of (items as string[])) {\n\t(items as string[]).push(item);\n} 1`] = `

  1 | for (const item of (items as string[])) {
  2 | 	(items as string[]).push(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(63): for (const item of (items as string[])) {\n\t(items as string[]).push(item);\n} 2`] = `

Message:
  1 | for (const item of (items as string[])) {
> 2 | 	(items as string[]).push(item);
    | 	                    ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(64): for (const value of set) {\n\tif (condition) {\n\t\tfoo();\n\t} else {\n\t\tset.delete(value);\n\t}\n\n\tset.add(value);\n} 1`] = `

  1 | for (const value of set) {
  2 | 	if (condition) {
  3 | 		foo();
  4 | 	} else {
  5 | 		set.delete(value);
  6 | 	}
  7 |
  8 | 	set.add(value);
  9 | }

`;

exports[`no-loop-iterable-mutation > invalid(64): for (const value of set) {\n\tif (condition) {\n\t\tfoo();\n\t} else {\n\t\tset.delete(value);\n\t}\n\n\tset.add(value);\n} 2`] = `

Message:
  1 | for (const value of set) {
  2 | 	if (condition) {
  3 | 		foo();
  4 | 	} else {
  5 | 		set.delete(value);
  6 | 	}
  7 |
> 8 | 	set.add(value);
    | 	    ^^^ Do not mutate \`set\` while iterating over it.
  9 | }

`;

exports[`no-loop-iterable-mutation > invalid(7): for (const item of items) {\n\titems.reverse();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.reverse();
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(7): for (const item of items) {\n\titems.reverse();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.reverse();
    | 	      ^^^^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(8): for (const item of items) {\n\titems.fill(item);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.fill(item);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(8): for (const item of items) {\n\titems.fill(item);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.fill(item);
    | 	      ^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(9): for (const item of items) {\n\titems.copyWithin(0, 1);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	items.copyWithin(0, 1);
  3 | }

`;

exports[`no-loop-iterable-mutation > invalid(9): for (const item of items) {\n\titems.copyWithin(0, 1);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	items.copyWithin(0, 1);
    | 	      ^^^^^^^^^^ Do not mutate \`items\` while iterating over it.
  3 | }

`;
